--- a/watchdog_config.ini
+++ b/watchdog_config.ini
@@ -8,8 +8,10 @@ API_URL=yourapiurl
 
 [website1]
 URL=http://yourwebsite1.com
-NODE=yournode
+NODE=yournode1
+VMID=yourvmid1
 
 [website2]
 URL=http://yourwebsite2.com
-VMID=yourvmid
+NODE=yournode2
+VMID=yourvmid2
