change from eval to source the ini file

--- a/watchdog_config.ini
+++ b/watchdog_config.ini
@@ -1,17 +1,17 @@
+<INI>
 ## Configuration file for online_checker.sh
 # In this file you need to insert the needed information to watch a site
-# You can add a new website by adding [new_website], you can choose between "VMID" or "NODE "
+# You can add a new website by adding new variables with a higher index (e.g., URL3, NODE3, VMID3 for website3)
 
-[api]
 API_TOKEN=yourapitoken
 API_URL=yourapiurl
 
-[website1]
-URL=http://yourwebsite1.com
-NODE=yournode1
-VMID=yourvmid1
+WEBSITE_COUNT=2
 
-[website2]
-URL=http://yourwebsite2.com
-NODE=yournode2
-VMID=yourvmid2
+URL[1]=http://yourwebsite1.com
+NODE[1]=yournode1
+VMID[1]=yourvmid1
+
+URL[2]=http://yourwebsite2.com
+NODE[2]=yournode2
+VMID[2]=yourvmid2
