--- a/watchdog_config.ini
+++ b/watchdog_config.ini
@@ -1,4 +1,3 @@
-<INI>
 ## Configuration file for online_checker.sh
 # In this file you need to insert the needed information to watch a site
 # You can add a new website by adding new variables with a higher index (e.g., URL3, NODE3, VMID3 for website3)
@@ -11,7 +10,11 @@ WEBSITE_COUNT=2
 URL[1]=http://yourwebsite1.com
 NODE[1]=yournode1
 VMID[1]=yourvmid1
+LXC[1]=YES
+VM[1]=NO
 
 URL[2]=http://yourwebsite2.com
 NODE[2]=yournode2
 VMID[2]=yourvmid2
+LXC[2]=YES
+VM[2]=NO
