--- a/watchdog_config.ini
+++ b/watchdog_config.ini
@@ -1,6 +1,7 @@
 ## Configuration file for online_checker.sh
 # In this file you need to insert the needed information to watch a site
 # You can add a new website by adding new variables with a higher index (e.g., URL3, NODE3, VMID3 for website3)
+# Your API_TOKEN needs a "\" before the "!" to escape the exclamation mark
 
 API_TOKEN=yourapitoken
 API_URL=yourapiurl
